--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div style="text-align: center;">
 
         
-            <h1>Price Map</h1> 
+            <h1>PRICE MAP</h1> 
             <div>
                 <iframe width="600" height="400" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/1.embed?showlink=false"></iframe>
             </div>      
