--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title of the document</title>
+        <title>Price Map</title>
     </head>
 
     <body>
         <div style="text-align: center;">
 
         
-            <h1>PRICE MAP</h1> 
+            <h1>Price Map</h1> 
             <div>
                 <iframe width="600" height="400" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/1.embed?showlink=false"></iframe>
             </div>      
