--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="col-lg-6 col-md-9 ">
                                 <div class="hero__caption">
                                     <span data-animation="fadeInUp" data-delay=".4s"><button style="background-color:#e24d42; border: none; font-size: 12px; padding: 6px 12px; padding: 10px 15px;">AI-POWERED</button></span>
-                                    <h1 data-animation="fadeInUp" data-delay=".6s">Get things done<br>with Appco</h1>
+                                    <h1 data-animation="fadeInUp" data-delay=".6s">Observatorio <br> de precios</h1>
                                     <p data-animation="fadeInUp" data-delay=".8s">Encuentra y compara el precio del mismo producto en diferentes puntos de venta.</p>
                                     <!-- Slider btn -->
                                    <div class="slider-btns">
@@ -148,10 +148,11 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
                         <div class="section-tittle text-center">
-                            <h2>Observatorio</h2>
+                            <h2>Comparación de precios</h2>
                         </div>
                     </div>
                 </div>
+              
                 <div class="row d-flex justify-content-center">  
                     <div class="row">           
                         <div class="column">
@@ -168,6 +169,7 @@
                         </div>
                     </div>                
                 </div>
+                
             </div>         
         </section>
         <!-- Observatorio End -->
@@ -179,7 +181,7 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
                         <div class="section-tittle text-center">
-                            <h2>Technology</h2>
+                            <h2>Tecnología</h2>
                         </div>
                     </div>
                 </div>
