--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <nav>
                                     <ul id="navigation">                                                                                                
                     
-                                        <li class="active"><a href="#Observatorio">Comparación</a></li>                                    
+                                        <li><a href="#observatorio">Comparación</a></li>                                    
                                         <li><a href="#contact">Contacto</a></li>
 
                                         <!--
