--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                  <a href="index.html"><img src="assets/img/logo/pricemap_logo.png" alt=""></a>                              
                              </div>
                              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                &copy;<script>document.write(new Date().getFullYear());</script> <a style="color:#1064dd;" href="https://neurometrics.la/" target="_blank">Neurometrics</a> | Av. Mariscal La Mar 550, Of.406 Miraflores, Lima | +51 (01) 7772037 | proyectos@neurometrics.la
+                                &copy;<script>document.write(new Date().getFullYear());</script> <a style="color:#1064dd;" href="https://neurometrics.la/" target="_blank">Neurometrics</a> | Av. Mariscal La Mar 550, Of.406 Miraflores, Lima | +51 (01) 7772037 | proyectos@neurometrics.la | <a style="color:#1064dd;" href="https://pixmap.io/" target="_blank">Pixmap</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>                                                                                   
                          </div>
                     </div>   
