--- a/index.html
+++ b/index.html
@@ -175,10 +175,8 @@
                             <h2>¿Te gustaría contar con <br> Pricemap para los productos <br> de tu empresa?</h2>
                         </div>
                     </div>
-                    <div style="background-color: #ffffff; padding: 50px; border-radius: 30px;">                                               
-                        <div>
-                            <p>Contáctanos <br> +51 (01) 7772037 <br> proyectos@neurometrics.la</p>
-                        </div>                       
+                    <div style="background-color: #ffffff; padding: 50px; border-radius: 30px;">                                              
+                        <p><b>Contáctanos</b><br> +51 (01) 7772037 <br> proyectos@neurometrics.la</p>                                          
                     </div>
                 </div>
             </div>
