--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div style="background-color: #ffffff; padding: 50px; border-radius: 30px;">                                              
-                        <p><b>Contáctanos</b><br> +51 (01) 7772037 <br> proyectos@neurometrics.la</p>                                          
+                        <p style="font-size: 17px;">Contáctanos <br> +51 (1) 7772037 <br> proyectos@neurometrics.la</p>                                          
                     </div>
                 </div>
             </div>
