--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="footer-area footer-padding">
             <div class="container">
                 <div class="row  justify-content-between">
-                    <div class="col-lg-3 col-md-4 col-sm-8">
+                    <div class="col-lg-8">
                          <div class="single-footer-caption mb-30">
                               <!-- logo -->
                              <div class="footer-logo">
