--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                             <h2>Comparación de precios</h2>
                         </div>
                     </div>
-                </div>
+                </div>              
 
                 <!-- Control buttons -->
-                <div id="myBtnContainer">
+                <div id="myBtnContainer" style="text-align: center;">
                     <button class="btn active" onclick="filterSelection('all')"> Todos</button>
                     <button class="btn" onclick="filterSelection('gaseosas')"> Gaseosas</button>
                     <button class="btn" onclick="filterSelection('abarrotes')"> Abarrotes</button>
