--- a/index.html
+++ b/index.html
@@ -56,23 +56,30 @@
             border: none;
             outline: none;
             padding: 20px 20px;
-            background-color: #666;            
-            cursor: pointer;            
+            background-color:white;
+            color: #8590A0;            
+            cursor: pointer;
+            border: 5px solid #F2F2F6;          
             }
 
             /* Add a light grey background on mouse-over */
             .btn:hover {
-            background-color: #666;
+            background-color: #4c98f2;
             background: #4c98f2;
+            color: white;
+            border: 5px solid #4c98f2;
             }
 
             /* Add a dark background to the active button */
             .btn.active {
             background-color: #4c98f2;
             color: white;
+            border: 5px solid #4c98f2;
             }
             .btn::before{
                 background: #4c98f2;
+                color: white;
+                border: 5px solid #4c98f2;
             }
         </style>
    </head>
@@ -183,7 +190,8 @@
                             <h2>Comparación de precios</h2>
                         </div>
                     </div>
-                </div>              
+                </div>
+              
 
                 <!-- Control buttons -->
                 <div id="myBtnContainer" style="text-align: center;">
