--- a/index.html
+++ b/index.html
@@ -222,7 +222,73 @@
 
                     <div class="filterDiv licores">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/12.embed?showlink=false"></iframe>
-                    </div>            
+                    </div>
+
+                    <!-- SECOND BASELINE-->
+                    <div class="filterDiv gaseosas">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/140.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv gaseosas">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/142.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv gaseosas">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/144.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/146.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/148.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/150.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/152.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/154.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/156.embed.?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/158.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/160.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/162.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/164.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/166.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/168.embed?showlink=false"></iframe>
+                    </div>
+
+                    <div class="filterDiv abarrotes">
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/170.embed?showlink=false"></iframe>
+                    </div>
+
                 </div>               
                 <!--
                 <div class="row d-flex justify-content-center">  
