--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                     <button class="btn active" onclick="filterSelection('all')"> Todos</button>
                     <button class="btn" onclick="filterSelection('gaseosas')"> Gaseosas</button>
                     <button class="btn" onclick="filterSelection('abarrotes')"> Abarrotes</button>
-                    <button class="btn" onclick="filterSelection('electrodomesticos')"> Electrodomésticos</button>
+                    <button class="btn" onclick="filterSelection('lacteos')"> Lácteos</button>
+                    <button class="btn" onclick="filterSelection('tecnologia')"> Tecnología</button>
                     <button class="btn" onclick="filterSelection('licores')"> Licores</button>
                 </div>
 
@@ -212,7 +213,7 @@
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/5.embed?showlink=false"></iframe> 
                     </div>
 
-                    <div class="filterDiv electrodomesticos">
+                    <div class="filterDiv tecnologia">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/8.embed?showlink=false"></iframe>
                     </div>
 
@@ -258,7 +259,7 @@
                     </div>
 
                     <div class="filterDiv abarrotes">
-                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/156.embed.?showlink=false"></iframe>
+                        <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/156.embed?showlink=false"></iframe>
                     </div>
 
                     <div class="filterDiv abarrotes">
@@ -273,19 +274,19 @@
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/162.embed?showlink=false"></iframe>
                     </div>
 
-                    <div class="filterDiv abarrotes">
+                    <div class="filterDiv lacteos">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/164.embed?showlink=false"></iframe>
                     </div>
 
-                    <div class="filterDiv abarrotes">
+                    <div class="filterDiv lacteos">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/166.embed?showlink=false"></iframe>
                     </div>
 
-                    <div class="filterDiv abarrotes">
+                    <div class="filterDiv lacteos">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/168.embed?showlink=false"></iframe>
                     </div>
 
-                    <div class="filterDiv abarrotes">
+                    <div class="filterDiv tecnologia">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/170.embed?showlink=false"></iframe>
                     </div>
 
