--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/146.embed?showlink=false"></iframe>
                     </div>
 
-                    <div class="filterDiv abarrotes">
+                    <div class="filterDiv lacteos">
                         <iframe width="400" height="350" frameborder="0" scrolling="no" src="//plotly.com/~neisserBOT/148.embed?showlink=false"></iframe>
                     </div>
 
